--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,7 +49,174 @@
     <!--Produtos-->
         <section class="produtos">
             <h2>Página Inicial</h2>
-            <div class="grid-produtos"></div>
+            <div class="grid-produtos">
+                <div class="produto">
+                    <img src="imagens/longboard.jpg" alt="longboard.jpg">
+                    <h3>Longboard Rosa Dos Ventos</h3>
+                    <p>Longboard de madeira esculpido ondas com a rosa dos ventos</p>
+                    <p class="preco">R$300,00</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="imagens/skate1.jpg" alt="skate homem aranha">
+                    <h3>Skate - Shape Homem Aranha</h3>
+                    <p>Skate branco detalhado de HQ do Homem Aranha</p>
+                    <p class="preco">R$250,50</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="imagens/skate2.jpg" alt="">
+                    <h3>Skate - Kuromi</h3>
+                    <p>Skate Shape - Kuromi preto</p>
+                    <p class="preco">R$350,59</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="imagens/skate5.jpg" alt="Skate Justice Dream Party com arte de gato e cartas">
+                    <h3>Skate Justice Dream Party</h3>
+                    <p>Skate com shape estilizado, design artístico de cartas de baralho e gato branco.</p>
+                    <p class="preco">R$420,00</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+               <div class="produto">
+                    <img src="imagens/skate4.jpg" alt="Skate Gato">
+                    <h3>Skate - Gato</h3>
+                    <p>Shape com estampa provocativa de gato estilizado</p>
+                    <p class="preco">R$289,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/jort4.jpg" alt="Short Jeans com Estrelas">
+                    <h3>Short Jeans - Estilo Estrela</h3>
+                    <p>Short jeans cintura alta com detalhes rasgados e estrelas bordadas</p>
+                    <p class="preco">R$119,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/jort3.jpg" alt="Short Spider Denim">
+                    <h3>Short Jeans - Spider Denim</h3>
+                    <p>Short jeans escuro com estampa de aranha e teias, estilo urbano e ousado</p>
+                    <p class="preco">R$139,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/jort2.jpg" alt="Short Jeans Desgastado">
+                    <h3>Short Jeans - Desgastado</h3>
+                    <p>Short jeans com lavagem desbotada, bolsos frontais e acabamento na barra</p>
+                    <p class="preco">R$109,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                 </div>
+
+
+                <div class="produto">
+                    <img src="imagens/jort3.jpg" alt="Short Jeans Preto com Estampa Vermelha">
+                    <h3>Short Jeans - Preto com Estampa Vermelha</h3>
+                    <p>Short jeans longo, preto, com bolsos grandes, costura branca e estampa vermelha nas costas</p>
+                    <p class="preco">R$149,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/calça1.jpg" alt="Calça Jeans Bordada - Estilo Gótico">
+                    <h3>Calça Jeans Baggy</h3>
+                    <p>Calça jeans preta com bordados vermelhos: caveira, rosto tribal e frase “HEAVENLY HIGHWAY TO HELL”</p>
+                    <p class="preco">R$189,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/calça2.jpg" alt="Calça Jeans Wide Fit Desbotada">
+                    <h3>Calça Jeans Cinza Baggy</h3>
+                    <p>Calça jeans escura com corte largo, estilo wide fit, visual desbotado nas pernas</p>
+                    <p class="preco">R$159,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="imagens/calça3.jpg" alt="Calça Jeans Tribal Flame">
+                    <h3>Calça Baggy Com desenho</h3>
+                    <p>Calça jeans preta oversized com estampa de chamas tribais brancas e bolso utilitário lateral</p>
+                    <p class="preco">R$179,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="imagens/calça4.jpg" alt="Calça Jeans Aranha Estilizada">
+                    <h3>Calça Jeans Aranha</h3>
+                    <p>Calça preta wide-leg com estampa de aranhas, teias e brilhos, elástico na cintura e estilo urbano</p>
+                    <p class="preco">R$169,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <<div class="produto">
+                    <img src="img/camisa1.jpg" alt="Camiseta Tokyo Mangá">
+                    <h3>Camiseta - Tokyo Mangá</h3>
+                    <p>Camiseta branca com estampa em estilo mangá: elementos tradicionais e modernos do Japão</p>
+                    <p class="preco">R$89,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="img/camisa2.jpg" alt="Camiseta Mística Surreal">
+                    <h3>Camiseta - Mão Mística</h3>
+                    <p>Camiseta branca com estampa surreal de mão simbólica, olho na palma e elementos esotéricos</p>
+                    <p class="preco">R$94,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+                <div class="produto">
+                    <img src="img/camisa3.jpg" alt="Camiseta Gatinho Zen">
+                    <h3>Camiseta - Gatinho Zen</h3>
+                    <p>Camiseta oversized com estampa de gato deitado, texto chinês “元気福” e elementos decorativos</p>
+                    <p class="preco">R$89,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+
+                <div class="produto">
+                    <img src="img/camisa4.jpg" alt="Camiseta Raglan Confusão Mental">
+                    <h3>Camiseta - Confusão Mental</h3>
+                    <p>Camiseta raglan com mangas marrons e ilustração minimalista de uma figura com cabeça rabiscada</p>
+                    <p class="preco">R$84,90</p>
+                    <a href="#" class="btn">Ver detalhes</a>
+                </div>
+
+            </div>
         </section>
+
+        <!--Rodapé-->
+        <footer class="rodape">
+            <p>
+            <p ><a href="#" id="nav">Sobre</a>  |  <a href="#" id="nav">Catálogo</a></a></p>
+            </p>
+
+            <p >
+            <a href="https://www.instagram.com/seuusuario" target="_blank">
+                <img src="imagens/instagram.png" alt="instagram"/>
+            </a>
+            <a href="https://wa.me/seunumerodetelefone" target="_blank">
+                <img src="imagens/whatsapp.png" alt="whatsapp"/>
+            </a>
+            <a href="https://www.facebook.com/seupaginanofacebook" target="_blank">
+                <img src="imagens/facebook.png" alt="facebook"/>
+            </a>
+           </p>
+            <p>Três Corações - MG</p>
+        </footer>
 </body>
 </html>
